--- a/index.html
+++ b/index.html
@@ -602,10 +602,12 @@
       <div class="footer-bottom">
         <p>© <span id="year"></span> Pravin Mishra. All rights reserved.</p>
         <p>Crafted with <span>cloud</span> excellence by Pravin Mishra</p>
+	<p> Pravin Mishra Portfolio v1.0 — Deployed on 3-Feb-2026 — By Ibeh Victory Chimaobi</p>
       </div>
 
     </div>
   </footer>
+
 
 
 
